--- a/style.css
+++ b/style.css
@@ -1,19 +1,16 @@
-body {
+*  {
     margin: 0;
     padding: 0;
-    font-family: 'Open Sans', sans-serif;  
-    background-color: #333;
-    color: whitesmoke;
+    font-family: 'Open Sans', sans-serif;     
 }
-.hero {
-    background-image: linear-gradient(black, transparent), url(images/banner.png);
+.header {
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(images/banner.png);
     background-size: cover;
-    background-repeat: no-repeat;
     background-position: center;
+    background-repeat: no-repeat;
     width: 100%;
     min-height: 100vh;
-    position: relative;
-    color: white;
+    position: relative; 
 }
 nav {
     display: flex;
@@ -27,13 +24,14 @@ nav {
     width: 150px;
     cursor: pointer;
     margin-left: 50px;
+    margin-top: 10px;
 } 
 .nav-links{
     flex: 1;
     text-align: right;
 }
 .nav-links ul li {
-    list-style-type: none;
+    list-style: none;
     display: inline-block;
     position: relative;
     margin: 0 20px;
@@ -46,7 +44,7 @@ nav {
     font-weight: bold;
     color: white;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 15px;
 }
 .nav-links ul li::after {
     content: '';
@@ -61,7 +59,7 @@ nav {
 .nav-links ul li:hover::after{
     width: 100%;
 }
-.main {
+.hero {
     width: 90%;
     text-align: center;
     position: absolute;
@@ -70,23 +68,26 @@ nav {
     color: white;
     transform: translate(-50%, -50%);
 }
-.main h1 {
+.hero h1 {
     font-size: 62px;
+    
 }
-.main p {
+.hero p {
      margin: 10px 0px 40px;
      font-size: 20px;
+     color: white;
 }
 .btn_1{
     width: 150px;
     font-size: 15px;
     font-weight: bold;
     text-transform: uppercase;
-    padding: 20px;
+    padding: 20px 40px;
     background-color:#669966  ;
     color: white;
     border: 1px solid #669966 ;
-    border-radius: 20px;   
+    border-radius: 20px; 
+    text-decoration: none;  
 }
 .btn_1:hover{
     border: 1px solid white;
@@ -133,6 +134,7 @@ h3 {
     text-align: center;
     padding: 40px;
 }
+
 .images img{
     width: 30%;
     border-radius: 5px;
@@ -152,13 +154,12 @@ h3 {
     padding: 40px;
 }
 .facility img {
-    width: 70%;
+    width: 90%;
     border-radius: 5px;
     margin-right: 10px;
 }
 .facility h3, .facility p {
-    text-align: start;
-    margin-left: 55px;
+    text-align: center;
 }
 .reviews {
     width: 100%;
@@ -172,8 +173,8 @@ h3 {
     justify-content: space-between;
     text-align: center;
     padding: 40px;
-
 }
+
 .student-review {
     background-color: #669966;
     color: whitesmoke;
@@ -182,7 +183,7 @@ h3 {
     width: fit-content;
     text-align: left;
     display: flex;
-    margin-right: 30px;
+    margin: 20px;
 }
 
 .student-review img{
@@ -201,7 +202,6 @@ h3 {
     background-repeat: no-repeat;
     background-size: cover;
     width: 80%;
-    height: 50vh;
     text-align: center;
     margin-left: 10%;
     margin-top: 50px;
@@ -209,16 +209,15 @@ h3 {
 
 }
 .contact-us h2{
-    padding-top: 70px;
+    padding: 30px 50px;
     color: white;
 }
-button {
-    width: 150px;
+.contact-us button {
     background: transparent;
     color: white;
     text-transform: uppercase;
+    margin-bottom: 30px;
     padding: 20px;
-    margin: -20px;
     cursor: pointer;
     font-size: 15px;
     font-weight: bold;
@@ -248,26 +247,37 @@ footer {
     text-align: center;
     margin: 30px 0;
 }
+.about {
+    margin: auto;
+    width: 700px;
+}
 nav .fa-solid {
     display: none;
 }
 
+/*RESPONSIVE*/
 @media(max-width: 1000px){
-    .main h1 {
-        font-size:20px;
+
+   .hero h1 {
+        font-size:40px;
     }
-    nav ul li{
+    .logo {
+        margin-left: 15px;
+    }
+    .nav-links ul li{
         display:block;
     }
-    nav ul {
+    .nav-links {
         position:absolute;
         background:#669966 ;
         height: 100vh;
         width: 200px;
         top: 0;
-        right: 0;
+        right: -200px;
         text-align: left;
         z-index: 2;
+        transition: 0.15s;
+        position: fixed;
     }
     nav .fa-solid{
         display: block;
@@ -276,4 +286,39 @@ nav .fa-solid {
         font-size: 22px;
         cursor: pointer;
     }
+    .students, .lorem, .images, .level {
+        display: block;
+        font-size: 20px;
+        margin: 20px;
+        align-items: center;
+    }
+    .certify, .facility, .student-review {
+        margin-bottom: 30px;
+        margin-top: 10px;
+    }
+    .images img{
+        width: 90%;
+        margin-bottom: 30px ;
+        align-items: center;
+    }
+    .about {
+        width:90%;
+    }
+    .contact-us {
+        width: 80%;
+        font-size: 20px;
+        align-items: center;
+    }
+    p {
+        font-size: 20px;
+    }
+    .contact-us h2{
+        font-size: 25px;
+    }
+    .contact-us button{
+        font-size: 15px;
+        padding: 15px  15px;
+        margin-bottom: 50px;
+    }
 }
+
