--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav {
     width: 150px;
     cursor: pointer;
     margin-left: 50px;
-    margin-top: 10px;
+    margin-top: 30px;
 } 
 .nav-links{
     flex: 1;
@@ -34,7 +34,7 @@ nav {
     list-style: none;
     display: inline-block;
     position: relative;
-    margin: 0 20px;
+    margin: 30px 20px;
     padding: 8px 12px;
 }
  
@@ -73,9 +73,9 @@ nav {
     
 }
 .hero p {
-     margin: 10px 0px 40px;
      font-size: 20px;
      color: white;
+     margin: 20px 0 50px;
 }
 .btn_1{
     width: 150px;
@@ -87,7 +87,8 @@ nav {
     color: white;
     border: 1px solid #669966 ;
     border-radius: 20px; 
-    text-decoration: none;  
+    text-decoration: none; 
+    margin-top: 20px; 
 }
 .btn_1:hover{
     border: 1px solid white;
@@ -260,6 +261,7 @@ nav .fa-solid {
 
    .hero h1 {
         font-size:40px;
+        margin-top: 50px;
     }
     .logo {
         margin-left: 15px;
@@ -296,8 +298,19 @@ nav .fa-solid {
         margin-bottom: 30px;
         margin-top: 10px;
     }
-    .images img{
+    .facility img {
         width: 90%;
+    }
+    .student-review {
+        width: 90%;
+        margin-left: -10px;
+    }
+    .certify {
+        width: 90%;
+        margin-left: -5px;
+    }
+    .images img{
+        width: 95%;
         margin-bottom: 30px ;
         align-items: center;
     }
